<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="and07c.lektion2.components.GatherActivity" >
    
       
<item
        android:id="@+id/del"
        android:orderInCategory="4"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
    
    <item android:id="@+id/m_edit_project" 
        android:title="@string/m_item_edit"
        android:orderInCategory="1" 
        android:showAsAction="ifRoom" 
        app:showAsAction="ifRoom">
    </item>
    
    <item android:id="@+id/m_gps" android:title="@string/m_item_gps" android:orderInCategory="3"
        app:showAsAction="ifRoom"> 
        <menu>
            <group android:id="@+id/group1" android:checkableBehavior="single">
                <item android:id="@+id/gps_1" android:title="@string/m_gps_foot" android:orderInCategory="1" android:checked="false"/>
                <item android:id="@+id/gps_2" android:title="@string/m_gps_velo" android:orderInCategory="2"/>
                <item android:id="@+id/gps_3" android:title="@string/m_gps_car_local" android:orderInCategory="3" android:checked="true"/>
                <item android:id="@+id/gps_4" android:title="@string/m_gps_car_far" android:orderInCategory="4"/>
            </group>
        </menu>
    </item>
    
    <item 
         android:id="@+id/m_select_project" 
         android:title="@string/m_item_select" 
         android:orderInCategory="2">
    </item>
    
    <item android:id="@+id/m_backup_project"
	android:orderInCategory="5"
	android:title="@string/m_item_backup_project"
	android:showAsAction="ifRoom" />
    
    <item android:id="@+id/m_show_osm"
	android:orderInCategory="6"
	android:title="@string/m_item_show_osm"
	android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/m_webserver" 
        android:showAsAction="ifRoom" 
        android:orderInCategory="4"
        android:title="@string/m_item_webserver">
        
    </item>
    
</menu>
